<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomeCompleto"
        android:layout_marginHorizontal="5dp"/>

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_border"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:layout_marginHorizontal="5dp"/>

    <EditText
        android:id="@+id/telefoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="Ex.:12-93456-7890"
        android:background="@drawable/edit_text_border"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginHorizontal="5dp"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_border"
        android:layout_marginHorizontal="5dp"/>

    <CheckBox
        android:id="@+id/listaEmailsCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingressoListaEmail"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:layout_marginHorizontal="5dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/masculinoRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/femininoRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:layout_marginHorizontal="5dp"/>

    <EditText
        android:id="@+id/cidadeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_border"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:layout_marginHorizontal="5dp"/>

    <Spinner
        android:id="@+id/estadoSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estados"
        android:layout_marginHorizontal="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp">

        <Button
            android:id="@+id/clearBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/saveBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>
</LinearLayout>